<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.tweetcount.view.MainViewModel" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/twitter_character_count"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/baseline_arrow_forward_ios_black_24"
                    app:tint="@color/dark_gray" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/twitter_logo" />

                <include
                    layout="@layout/counters_layout"
                    app:viewModel="@{viewModel}" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/search_layout"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/gray"
                    app:boxStrokeWidth="1dp"
                    app:expandedHintEnabled="false"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start|top"
                        android:hint="@string/start_typing_you_can_enter_up_to_280_characters"
                        android:imeOptions="actionSearch"
                        android:includeFontPadding="false"
                        android:inputType="textMultiLine"
                        android:padding="20dp"
                        android:text="@={viewModel.tweet}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray"
                        app:addTextChangedListener="@{viewModel.searchKeywordValidationListener}" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/btn_copyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/round15_green"
                        android:padding="20dp"
                        android:text="@string/copy_text"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/round15_red"
                        android:onClick="@{()->viewModel.clearText()}"
                        android:padding="20dp"
                        android:text="@string/clear_text"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/round15_light_blue"
                    android:gravity="center"
                    android:onClick="@{()->viewModel.postTweet()}"
                    android:padding="20dp"
                    android:text="@string/post_tweet"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>